--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,7 +25,7 @@ header h1 .seo {
     color: #d9dcd6;
 }
 
-header section {
+nav{
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -33,11 +33,11 @@ header section {
     font-size: 20px;
 }
 
-header section ul {
+nav ul {
     list-style-type: none;
 }
 
-header section ul li {
+nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
