--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,7 +86,7 @@ p {
     width: 20%;
     height: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #2589bd;
+    background-color: #339ED6;
 }
 /*defines elements of the aside*/
 .margin-aside{
@@ -112,13 +112,17 @@ h3 {
     padding: 50px;
     height: 300px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
+    background-color: #339ED6;
     color: #ffffff;
 }
 
 /* img max heights */
 .content img {
     max-height: 200px;
+}
+
+p{
+    color:black;
 }
 
 /*impacts the seo class for the article by setting margin and font size*/
